syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "identity/service/v1/user.proto";

// 用户个人资料服务
service UserProfileService {
  // 获取用户资料
  rpc GetUser (google.protobuf.Empty) returns (identity.service.v1.User) {
    option (google.api.http) = {
      get: "/admin/v1/me"
    };
  }

  // 更新用户资料
  rpc UpdateUser (identity.service.v1.UpdateUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/admin/v1/me"
      body: "*"
    };
  }

  // 修改用户密码
  rpc ChangePassword(identity.service.v1.ChangePasswordRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/me/password"
      body: "*"
    };
  }

  // 上传头像
  rpc UploadAvatar(identity.service.v1.UploadAvatarRequest) returns (identity.service.v1.UploadAvatarResponse) {
    option (google.api.http) = {
      post: "/admin/v1/me/avatar"
      body: "*"
    };
  }
  // 删除头像
  rpc DeleteAvatar(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/admin/v1/me/avatar"
    };
  }

  // 绑定手机号码/邮箱
  rpc BindContact(identity.service.v1.BindContactRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/me/contact"
      body: "*"
    };
  }
  // 验证手机号码/邮箱
  rpc VerifyContact(identity.service.v1.VerifyContactRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/me/contact/verify"
      body: "*"
    };
  }
}
